# prob-fx-2

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  benchmark_params.txt  cabal.project  graph.py  graphpaper.py  model-output.txt  models.cabal  models.sh  prob-fx.cabal  prob-fx.sh  prob-fx2.cabal  prob-fx2.sh  test.py  tests.sh
.github/workflows/: haskell.yml
benchmarking/: BenchmarkPrograms.hs  BenchmarkTests.hs  Main.hs
benchmarking/prob-fx/: BenchmarkPrograms.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-19232/extensible-0.7/examples/: misc.hs
dist-newstyle/tmp/src-4709/lens-4.19.2/lens-properties/: .hlint.yaml
examples/: AD.hs  CoinFlip.hs  EffDemo.hs  Examples.hs  GMM.hs  GuidedExamples.hs  HMM.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Main.hs  Radon.hs  SIR.hs  SIRModular.hs  SIRNonModular.hs  School.hs  VIExamples.hs
examples/Benchmark/: Main.hs  benchmark_params.txt  plot_benchmarks.py
examples/Test/: Examples.hs  Expected.hs  Main.hs
examples/benchmarks/: BenchmarkUtil.hs  Gen.jl  Main.hs  MonadBayes.hs  ProbFX.hs  Pyro.py  benchmark_params.txt  benchmarks-gen.csv  benchmarks-monad-bayes.csv  benchmarks-prob-fx.csv  benchmarks.csv  linregr.jl  params-monad-bayes.txt  params-prob-fx.txt  params.txt  plot_benchmarks.py
examples/benchmarks/old/: benchmarks-gen.csv  benchmarks-monad-bayes.csv  benchmarks-prob-fx.csv
examples/benchmarks/old-params-benchmarks/: plot_benchmarks.py
examples/demo/: Demo.hs  EffDemo.hs
examples/tests/: Expected.hs  Main.hs
examples/tests/Test/: Expected.hs  Inference.hs  InferenceExpected.hs  Numerics.hs  PDF.hs
src/: AD.hs  Comp.hs  DMap.hs  DataSets.hs  Dep.hs  Dist.hs  DistAD.hs  Dual.hs  EffExample.hs  Env.hs  Example.hs  Experiment.hs  FindElem.hs  FreeT.hs  Freer.hs  Grad.hs  IO.hs  Inference.hs  LogP.hs  Model.hs  ModelEnv.hs  ModelF.hs  ModelFreeT.hs  Node.hs  NonDet.hs  ObsReader.hs  OldTrace.hs  OpenProductVec.hs  OpenSum.hs  PrimDist.hs  Prog.hs  Reader.hs  STrace.hs  Sample.hs  Sampler.hs  State.hs  Test.hs  TestSMC.hs  Trace.hs  TyCompare.hs  (+4 more)
src/Control/Monad/Bayes/: Sampler.hs
src/Deprecated/: OldTrace.hs
src/Effects/: Demo.hs  Dist.hs  EnvRW.hs  Example.hs  Guide.hs  GuidedSample.hs  IO.hs  Lift.hs  MonadBayes.hs  MulDist.hs  NonDet.hs  ObsRW.hs  ObsReader.hs  Observe.hs  Param.hs  Reader.hs  Resample.hs  Sample.hs  Score.hs  State.hs  Writer.hs
src/Effects/Fused/: Reader.hs
src/Examples/: BayesianNN.hs  CoinFlip.hs  GMM.hs  HLinRegr.hs  HMM.hs  HierarchicalLinRegr.hs  HierarchicalSchool.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Radon.hs  SIR.hs  SIRModular.hs  SIRRecord.hs  School.hs
src/Examples/MBayes/: HMM.hs  LDA.hs  LinRegr.hs  SIR.hs
src/Extensible/: AffineReader.hs  Bug.hs  DataSets.hs  Dist.hs  EffExample.hs  Example.hs  ExamplePaper.hs  Experiment.hs  FindElem.hs  Freer.hs  IO.hs  Inference.hs  Member.hs  Model.hs  ModelEnv.hs  NonDet.hs  ObsReader.hs  Observe.hs  OpenProduct.hs  OpenProductVec.hs  OpenSum.hs  Reader.hs  RecordReader.hs  STrace.hs  Sample.hs  Sampler.hs  State.hs  Test.hs  TestNew.hs  TestPaper.hs  TestSMC.hs  Writer.hs
src/Extensible/Experiments/: Bug.hs  ModelTypeSynonym.hs
src/Extensible/Inference/: Basic.hs  Inf.hs  LW.hs  MH.hs  RMSMC.hs  SIS.hs  SMC.hs  SMC_SIS.hs  Simulate.hs  SimulateTrace.hs
src/Extensible/_Old/: Example.hs  Simulate.hs  Test.hs  graph.py
src/Freer/: Trace.hs
src/Fused/: Algebra.hs  Example.hs  Lift.hs  ObsReader.hs  Reader.hs  Sum.hs  Writer.hs
src/Fused/SrcComparison/: AlgebraSrc.hs  ExampleSrc.hs  LiftSrc.hs  ReaderSrc.hs
src/FusedEffects/: Algebra.hs  Dist.hs  Example.hs  Lift.hs  Model.hs  ObsReader.hs  Reader.hs  Sum.hs  Writer.hs
src/FusedEffects/SrcComparison/: AlgebraSrc.hs  ExampleSrc.hs  LiftSrc.hs  ReaderSrc.hs
src/Inference/: ARS.hs  BBVI.hs  BBVICombined.hs  Basic.hs  INVI.hs  INVIReverse.hs  ISVI.hs  LW.hs  MAPVI.hs  MB.hs  MBAYES.hs  MBayes.hs  MH.hs  MHInv.hs  MLE.hs  MLEVI.hs  PMMH.hs  RMSMC.hs  SIM.hs  SIS.hs  SMC.hs  SMC2.hs  SMC_SIS.hs  Simulate.hs  VI.hs
src/Inference/Guided/: BBVI.hs  Guided.hs  MAP.hs  MLE.hs
src/Inference/GuidedX/: BBVI.hs  Guided.hs  MAP.hs  MLE.hs
src/Inference/MC/: ARS.hs  Gibbs.hs  IM.hs  LW.hs  MH.hs  Metropolis.hs  PIM.hs  PMH.hs  PMMH.hs  RMPF.hs  RMSMC.hs  RS.hs  RWM.hs  SIM.hs  SIS.hs  SMC.hs  SMC2.hs  SSMH.hs
src/Inference/VI/: BBVI.hs  BBVICombined.hs  BBVI_Combined.hs  INVI.hs  INVI_MAP.hs  MAP.hs  MAPVI.hs  MLE.hs  MLEVI.hs  MLE_MCMC.hs  VI.hs
src/Inference/VI/Extra/: BBVI_Combined.hs  MLE_MCMC.hs
src/Inference/VI/Icfp23/: BBVI.hs  MAP.hs  MLE.hs  VI.hs
src/Not-working/: ModelFreeT.hs
src/Old/: EffExample.hs  Example.hs  Experiment.hs  OpenProductVec.hs  Simulate.hs  Test.hs  Trace.hs
src/Old/Inference/: LW.hs  MH.hs  PMMH.hs  SIM.hs  SMC.hs  SMC_SIS.hs  Simulate.hs
src/Trans/: Dist.hs  Example.hs  FreeT.hs  Inference.hs  Model.hs  ModelF.hs  Sampler.hs
src/Unused/: ModelStateT.hs
tests/: Expected.hs  Main.hs  Tests.hs
tests/Tests/: Examples.hs  Expected.hs
tests/Tests/Examples/: DataSets.hs  GMM.hs  HMM.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Radon.hs  SIR.hs  School.hs
