cabal-version:       3.6
name:                prob-fx
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE.md
copyright:           2022 Minh Nguyen
stability:           experimental
author:              Minh Nguyen
maintainer:          minhnguyen1995@googlemail.com
homepage:            http://github.com/min-nguyen/prob-fx-1.5
synopsis:            A library for modular probabilistic modelling
description:         
  A library for probabilistic programming using algebraic effects. The
  emphasis is on modular definitions of probabilistic models, and also
  compositional implementation of model execution (inference) in terms 
  of effect handlers.

category:            Statistics
build-type:          Simple

tested-with:
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.4
  GHC == 9.0.1
  

library
  exposed-modules:    
                      Effects.Dist,
                      Effects.Lift,
                      Effects.ObsReader,
                      Effects.State,
                      Effects.Writer,
                      Inference.LW,
                      Inference.MH,
                      Inference.SIM,
                      Inference.MBAYES,
                      Env,
                      FindElem,
                      Model,
                      OpenSum,
                      PrimDist,
                      Prog,
                      Sampler,
                      Trace,
                      Util

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.11 && <= 4.17,
                       aeson < 2,
                       containers,
                       dirichlet,
                       extensible,
                       freer-simple,
                       ghc-prim,
                       lens,
                       log-domain,
                       membership,
                       mtl,
                       mwc-probability,
                       mwc-random,
                       primitive,
                       random,
                       statistics,
                       transformers,
                       vector,
                       monad-bayes >= 0.1.1.2

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable prob-fx
  -- .hs or .lhs file containing the Main module.
  main-is:            Main.hs

  other-modules:      CoinFlip,
                      DataSets,
                      HMM,
                      GMM,
                      LDA,
                      LinRegr,
                      LogRegr,
                      Radon,
                      School,
                      SIR,
                      SIRModular,
  -- Other library packages from which modules are imported.
  build-depends:       base,
                       containers,
                       extensible,
                       split,
                       prob-fx,
                       log-domain,
                       monad-bayes,
                       lens

  hs-source-dirs:      examples

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math
 
executable tests
  -- .hs or .lhs file containing the Main module.
  main-is:            Test/Main.hs

  other-modules:      Test.Expected,
                      Test.Examples,
                      CoinFlip,
                      DataSets,
                      HMM,
                      GMM,
                      LDA,
                      LinRegr,
                      LogRegr,
                      Radon,
                      School,
                      SIR,
                      SIRModular

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       containers,
                       extensible,
                       split,
                       prob-fx,
                       hspec,
                       HUnit,
                       lens,
                       log-domain,
                       monad-bayes

  hs-source-dirs:      examples

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math