cabal-version:       3.0
name:                prob-fx
version:             0.2.0.0
license:             BSD-3-Clause
license-file:        LICENSE.md
copyright:           2022 Minh Nguyen
stability:           experimental
author:              Minh Nguyen
maintainer:          minhnguyen1995@googlemail.com
homepage:            http://github.com/min-nguyen/prob-fx-1.5
synopsis:            A library for modular probabilistic modelling
description:
  A library for probabilistic programming using algebraic effects. The
  emphasis is on modular definitions of probabilistic models, and also
  compositional implementation of model execution (inference) in terms
  of effect handlers.

category:            Statistics
build-type:          Simple

tested-with:
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.4
  GHC == 9.0.2

library
  hs-source-dirs:     src
  exposed-modules:    Effects.Dist,
                      Effects.Lift,
                      Effects.NonDet,
                      Effects.ObsRW,
                      Effects.Observe,
                      Effects.State,
                      Effects.Sample,
                      Effects.Writer,
                      Inference.MC.LW,
                      Inference.MC.IM,
                      Inference.MC.Gibbs,
                      Inference.MC.MH,
                      Inference.MC.SIM,
                      Inference.MC.SIS,
                      Inference.MC.SMC,
                      Inference.MC.RMSMC,
                      Inference.MC.PIM,
                      Inference.MC.PMMH,
                      Inference.MC.SMC2,
                      Inference.MC.Metropolis,
                      Inference.VI.VI,
                      Inference.VI.BBVI,
                      Inference.VI.INVI,
                      Inference.VI.MLE,
                      Inference.VI.MAP,
                      Inference.VI.Extra.BBVI_Combined,
                      -- Inference.MB,
                      Env,
                      LogP,
                      Model,
                      PrimDist,
                      Prog,
                      Sampler,
                      Trace,
                      TyCompare,
                      Util,
                      Vec

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      base                          >= 4.11 && < 4.16,
                      ghc-prim                      >= 0.5.3 && < 0.8,
                      deepseq                       >= 1.4.4 && < 1.5,
                      containers                    >= 0.6.0 && < 0.7,
                      primitive                     >= 0.7.4 && < 0.8,
                      transformers                  >= 0.5.6 && < 0.6,
                      random                        >= 1.2.1 && < 1.3,
                      mtl                           >= 2.2.2 && < 2.3,
                      vector                        >= 0.12.3 && < 0.13,
                      dirichlet                     >= 0.1.0 && < 0.2,
                      log-domain                    >= 0.13.2 && < 0.14,
                      mwc-random                    >= 0.15.0 && < 0.16,
                      extensible                    >= 0.9 && < 0.10,
                      membership                    >= 0.0.1 && < 0.1,
                      lens                          >= 5.1.1 && < 5.2,
                      mwc-probability               >= 2.3.1 && < 2.4,
                      statistics                    >= 0.16.1 && < 0.17,
                      criterion                     >= 1.5.13 && < 1.6,
                      split                         >= 0.2.3 && < 0.3,
                      math-functions                >= 0.3.4 && < 0.4,
                      ad                            >= 4.5.2 && < 4.6,
                      reflection                    >= 2.1.6 && < 2.2,
                      vec                           >= 0.4.1 && < 0.5,
                      fin                           >= 0.2.1 && < 0.3,
                      -- monad-bayes                   >= 0.2.0 && < 0.2.1,
                      split                         >= 0.2.3 && < 0.3

  -- Base language which the package is written in.
  default-language:   Haskell2010
  ghc-options:        -O2 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable prob-fx
  hs-source-dirs:     examples,
                      -- leave 'src' uncommented for testing only
                      src
  main-is:            Main.hs
  other-modules:      CoinFlip,
                      DataSets,
                      HMM,
                      GMM,
                      LDA,
                      LinRegr,
                      LogRegr,
                      Radon,
                      School,
                      SIR,
                      SIRNonModular,
  build-depends:      base,
                      containers,
                      extensible,
                      split,
                      prob-fx,
                      log-domain,
                      fin,
                      -- the below row of dependencies are only necessary if 'src' is included as a hs-source-dir
                      statistics, mwc-probability, mwc-random, vector, transformers, mtl, math-functions, vec,
                      -- monad-bayes,
                      lens
  default-language:   Haskell2010
  ghc-options:        -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable benchmarks
  hs-source-dirs:     examples/benchmarks,
                      examples

  main-is:            Main.hs
  other-modules:      HMM,
                      LDA,
                      LinRegr
  build-depends:      base,
                      criterion,
                      deepseq,
                      prob-fx,
                      split,
                      log-domain,
                      -- monad-bayes,
                      statistics,
                      fin
  default-language:   Haskell2010
  ghc-options:        -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

test-suite tests
  type:               exitcode-stdio-1.0

  hs-source-dirs:     examples/tests,
                      examples

  main-is:            Main.hs
  other-modules:      Test.Numerics,
                      Test.Inference,
                      Test.InferenceExpected,
                      Examples,
                      DataSets,
                      HMM,
                      GMM,
                      LDA,
                      LinRegr,
                      LogRegr,
                      Radon,
                      School,
                      SIR
  build-depends:      base,
                      containers,
                      extensible,
                      split,
                      prob-fx,
                      HUnit >= 1.6.0 && < 1.7.0,
                      lens,
                      statistics,
                      dirichlet,
                      QuickCheck,
                      log-domain,
                      vector,
                      fin,
                      -- monad-bayes,
                      log-domain
  default-language:   Haskell2010